--- a/app/views/slides/edit.html.haml
+++ b/app/views/slides/edit.html.haml
@@ -14,11 +14,11 @@
           = f.hidden_field :crop_h
           .field
             .s-description
-              = f.label :description
+              = f.label "توضیحات به انگلیسی"
               = f.text_area :description, :cols => '80', :rows => "3", :class => "slide-description"
           
             .s-description
-              = f.label :description_fa
+              = f.label "توضیحات به فارسی"
               = f.text_area :description_fa, :cols => '80', :rows => "3", :class => "slide-description"  
           
           .clrear-float
