--- a/app/views/users/login.html.haml
+++ b/app/views/users/login.html.haml
@@ -9,7 +9,9 @@
     .login-form
       = form_tag create_session_path do 
         .field
-          = text_field_tag :name, "",:class => "txt", :placeholder => "نام کاربری را وارد کنید"
-          = password_field_tag :password, "", {:class => "txt"}      
+          %span.lable=" نام کاربری:"
+          %span= text_field_tag :name, "",:class => "txt", :placeholder => "نام کاربری را وارد کنید"
+          %span.lable=" رمز عبور:"
+          %span= password_field_tag :password, "", {:class => "txt"}      
           = submit_tag "ورود", {:class => "btn"}   
 
