--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -23,7 +23,7 @@ h1.logo a									{width:100%; height:100%; float:left; text-indent:-9999px}
 #head ul li									{width:110px; height:30px; margin-left:1px; float:right; font-family:Arial, Helvetica, sans-serif; font-size:13px; color:#5f5f5f; line-height:20px; text-transform:uppercase; text-align:center}
 #head ul li:first-child						{margin:0}
 #head ul li	a,#head ul li a.active			{width:110px; height:30px; padding:0 13px; float:left; color:inherit; background:#252525; text-align:center}
-#head ul li	a:hover,#head ul li a.active	{color:#31a1ff; height:30px;background:#272727; text-align:center; text-decoration:none}
+#head ul li	a:hover,#head ul li a.active	{color:#7ddc1f; height:30px;background:#272727; text-align:center; text-decoration:none}
 #cu3er-container							{width:800px; height:360px; float:left; outline:0; position:absolute; top:166px; left:0px; z-index:10}
 img.ban_bg									{width:auto; float:left; position:absolute; top:117px; right:200px}
 
@@ -32,8 +32,8 @@ img.ban_bg									{width:auto; float:left; position:absolute; top:117px; right:
 #content_sup								{width:800px; float:left; position:relative}
 
 
-#welcom_pan									{width:85%; margin-left:5%;margin-right:5%; margin-top:27px; padding-bottom:36px; float:left;  background:url(crosslines.png) repeat-x right 8px;}
-#welcom_pan h2.heading2											{width:auto; margin-top:9px; font-family:Arial, Helvetica, sans-serif; font-size:26px; color:#31a1ff; font-weight:bold; line-height:30px; letter-spacing:-1.7px}
+#welcom_pan									{width:85%; margin-left:5%;margin-right:5%; margin-top:27px; padding-bottom:36px; float:left;  background:url(crosslines.png) no-repeat left 8px;}
+#welcom_pan h2.heading2											{width:auto; margin-top:9px; font-family:Arial, Helvetica, sans-serif; font-size:26px; color:#7ddc1f; font-weight:bold; line-height:30px; letter-spacing:-1.7px}
 #welcom_pan h2.heading2 span										{color:#3b3b3b; text-transform:lettercase; margin-right:5px}
 #welcom_pan #quotPan a.brochure						{float:left; width:auto; height:54px; margin:15px 31px 0 15px ; padding:0 8px 0 0; font-family:"Trebuchet MS", Arial, Helvetica, sans-serif; font-size:12px; color:#ffffff; line-height:54px; background:url(buttonBg.png) no-repeat right -54px}
 #welcom_pan #quotPan a.brochure span					{width:auto; height:54px; padding:0 13px 0 23px; float:left; background:url(buttonBg.png) no-repeat 0 0}
@@ -77,7 +77,7 @@ ul#infoPan li p.descrip						{margin-top:13px; font-size:12px; line-height:16px;
 
 
 
-#foot										{width:100%; height:120px; float:left; background:url(footBg.png) repeat-x }
+#foot										{width:100%; height:120px; float:left; }
 #foot_cen									{width:800px; margin:5px auto 0 auto}
 #foot h6									{width:200px; height:131px; text-indent:-9999px; }
 #foot h6 a									{width:100%; height:100%; float:left}
@@ -93,18 +93,18 @@ ul#infoPan li p.descrip						{margin-top:13px; font-size:12px; line-height:16px;
 #service_pan ul li							{width:325px; height:100px; margin:0 30px;  border-bottom:#c9c9c9 solid 1px}
 /*#service_pan ul li:first-child				{border:0}
 */#service_pan ul li:hover					{background:#fbfbfb}
-#service_pan ul li h5						{width:100%; margin:10px 0 0 10px; font-family:Arial, Helvetica, sans-serif; font-size:16px; color:#31a1ff}
+#service_pan ul li h5						{width:100%; margin:10px 0 0 10px; font-family:Arial, Helvetica, sans-serif; font-size:16px; color:#7ddc1f}
 #service_pan ul li p						{width:300px; margin:5px 0 0 10px; float:left; font-family:"Trebuchet MS", Arial, Helvetica, sans-serif; font-size:12px; color:#5c5c5c}
-#service_pan ul li p a						{width:auto; color:#31a1ff; margin-left:10px}
+#service_pan ul li p a						{width:auto; color:#7ddc1f; margin-left:10px}
 
-.div-slider {width:70%; margin-right:15%; margin-left:15%; margin-top:-20px}
+.div-slider {background:url(headBg.png) repeat;width:70%; margin-right:15%; margin-left:15%; margin-top:-20px}
 .div_pic {margin-top:20px;width:100%;  height:250px; }
 
 .head-serach {width:100%; background:url(headsearch.png) repeat-x}
 .head-serach a#admin-link {color:#5f5f5f; margin-left:10px; width:300px}
-.head-serach a#admin-link:hover {text-decoration:none; color:#31A1FF;background:url(headsearch.png)  no-repeat}
-.head-serach a#admin-link.active {text-decoration:none; color:#31A1FF;background:url(headsearch.png)  no-repeat}
-.head-serach a {color:#31a1ff; margin:2px; }
+.head-serach a#admin-link:hover {text-decoration:none; color:#7ddc1f;background:url(headsearch.png)  no-repeat}
+.head-serach a#admin-link.active {text-decoration:none; color:#7ddc1f;background:url(headsearch.png)  no-repeat}
+.head-serach a {color:#7ddc1f; margin:2px; }
 .head-serach a:hover {color:#fff;  }
 .pull-left {margin-left :30px; margin-top:5px; height:25px}
 .main { width:100%;  }
