--- a/app/views/home/home.html.haml
+++ b/app/views/home/home.html.haml
@@ -32,6 +32,21 @@
             %p
               = strip_tags(service.description)
               =link_to  "ادامه مطلب", service
+    .rezomeh
+      .item-company
+        .himg
+          =image_tag "co_logos_mean_09.jpg"
+        %span="توضیحات مربوط"
+      .item-company
+        .himg
+          =image_tag "raush-logo.jpg"
+        %span="توضیحات مربوط"
+      .item-company
+        .himg
+          =image_tag "company_logo.jpg"
+        %span="توضیحات مربوط"
+      
+      
     
   :javascript
     $(".item").first().addClass("active");
