--- a/app/views/shared/_menu_bar.html.haml
+++ b/app/views/shared/_menu_bar.html.haml
@@ -20,7 +20,7 @@
           
           -Page.all.each do |page|  
             %li
-              = link_to page.title, page_path(page), :class => ('active' if current_page?(page_path(page)))    
+              = link_to page.title_fa, page_path(page), :class => ('active' if current_page?(page_path(page)))    
           %li
             = link_to "خدمات", Service, :class => ('active' if current_page?(Service))    
           %li
