--- a/app/views/home/home.html.haml
+++ b/app/views/home/home.html.haml
@@ -36,15 +36,15 @@
       .item-company
         .himg
           =image_tag "co_logos_mean_09.jpg"
-        %span="توضیحات مربوط"
+        .nav-company="توضیحات مربوط"
       .item-company
         .himg
           =image_tag "raush-logo.jpg"
-        %span="توضیحات مربوط"
+        .nav-company="توضیحات مربوط"
       .item-company
         .himg
           =image_tag "company_logo.jpg"
-        %span="توضیحات مربوط"
+        .nav-company="توضیحات مربوط"
       
       
     
