--- a/app/views/products/edit.html.haml
+++ b/app/views/products/edit.html.haml
@@ -1,9 +1,9 @@
 .list-div
   #welcom_pan   
     %h2.heading2
-      = t("Product")
-      %span
-        = t("IDM_Product") 
+      = "محصولات"
+      %span 
+        = "راشا"        
     .show-list
       = render 'form'
     #quotPan
