--- a/app/views/products/new.html.haml
+++ b/app/views/products/new.html.haml
@@ -1,10 +1,9 @@
 .list-div
   #welcom_pan   
-    %h2.heading2 
-      = t("Product")
-      %span
-        = t("IDM_Product")
-      
+    %h2.heading2
+      ="محصول جدید"
+      %span 
+        = "راشا"        
     .show-list
       = render 'form'
     #quotPan
