--- a/app/views/services/new.html.haml
+++ b/app/views/services/new.html.haml
@@ -1,9 +1,9 @@
 .list-div
   #welcom_pan   
-    %h2.heading2 
-      = t("Service")
-      %span
-        = t("IDM_Service")
+    %h2.heading2       
+      = "خدمات جدید"
+      %span 
+        = "راشا"        
     .show-list
       = render 'form'
     #quotPan
