--- a/app/views/slides/_form.html.haml
+++ b/app/views/slides/_form.html.haml
@@ -9,11 +9,9 @@
   .field
     .s-upload-img
       = f.file_field :image, :id => "slide_img"    
+    
     .s-description
-      = f.label "توضیحات به انگلیسی"
-      = f.text_area :description, :id => "slide_des"
-    .s-description
-      = f.label "توضیحات به فارسی"
+      = f.label "توضیحات"
       = f.text_area :description_fa, :id => "slide_des"
   .clrear-float
     
