--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -11,17 +11,8 @@ pre {
   font-size: 11px;
 }
 
-a {
-  color: #000;
-  &:visited {
-    color: #666;
-  }
-  &:hover {
-    color: #fff;
-    background-color: #000;
-  }
-}
-
+a:hover {text-decoration:none;}
+a:visited{text-decoration:none;}
 div {
   &.field, &.actions {
     margin-bottom: 10px;
@@ -84,6 +75,23 @@ background:url(pat.png) repeat;
     }
   
 }
+.nav-company {
+  position: relative;
+  color:#fff;
+  padding:2px;
+  
+  top: -30px;  
+  background:url(slideBg1.png) repeat-x;
+  opacity: 0.7;
+  filter: alpha(opacity=70); /* For IE8 and earlier */;
+  height: 20px;
+  p {     
+    opacity:1;
+    filter:alpha(opacity=100); /* For IE8 and earlier */;
+    }
+  
+}
+
 
 .en{
 text-align:left;
