--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -1,4 +1,4 @@
-html{background:#151515}
+html{background:#151515; font-family:"BNAZANIN"}
 body										{margin:0; background:#151515; font-family:"Trebuchet MS", Arial, Helvetica, sans-serif; }
 *											{margin:0; padding:0}
 a											{outline:0; text-decoration:none}
@@ -6,34 +6,34 @@ img											{border:0}
 
 li											{list-style:none}
 
-#head										{width:100%; background:url(headBg.png) repeat-x; }
+#head										{width:100%; }
 .head_height								{height:160px}
 .head_pad									{padding-bottom:30px}
 
 #head_cen									{width:100%; margin:0 auto}
 #head_sup									{width:100%; float:left; position:relative}
-#head p.search								{width:auto; margin-top:12px; margin-right:20px; float:right; font-family:"Trebuchet MS", Arial, Helvetica, sans-serif; font-size:11px; color:#999999; line-height:25px; letter-spacing:1px}
+#head p.search								{width:auto; margin-top:12px; margin-right:20px; float:right; font-family:"BNAZANIN"; font-size:11px; color:#999999; line-height:25px; letter-spacing:1px}
 #head p.search label						{width:auto; margin-right:10px; float:left}
-#head p.search input.txt					{width:125px; height:15px; margin-right:7px; float:left; font-family:"Trebuchet MS", Arial, Helvetica, sans-serif; font-size:12px; color:#2c2d2c; border:0; background:url(searchbg.png) no-repeat}
-#head p.search input.btn					{width:68px; height:21px; float:left; border:0; font-family:"Trebuchet MS", Arial, Helvetica, sans-serif; font-size:11px; color:#999999; text-align:center; cursor:pointer; background:url(searchbtn.png) no-repeat}
+#head p.search input.txt					{width:125px; height:15px; margin-right:7px; float:left; font-family:"BNAZANIN"; font-size:12px; color:#2c2d2c; border:0; background:url(searchbg.png) no-repeat}
+
 #head p.search input.btn:active				{background-position:2px 2px}
 h1.logo										{width:200px; height:100px; margin-top:5px; float:left; background:url(logo.png) no-repeat}
 h1.logo a									{width:100%; height:100%; float:left; text-indent:-9999px}
 #head ul									{width:580px;  height:30px; margin-top:53px; float:right;text-align:center; margin-right:65px}
-#head ul li									{width:110px; height:30px; margin-left:1px; float:right; font-family:Arial, Helvetica, sans-serif; font-size:13px; color:#5f5f5f; line-height:20px; text-transform:uppercase; text-align:center}
+#head ul li									{width:110px; height:30px; margin-left:1px; float:right; font-family:"BNAZANIN"; font-size:13px; color:#5f5f5f; line-height:20px; text-transform:uppercase; text-align:center}
 #head ul li:first-child						{margin:0}
 #head ul li	a,#head ul li a.active			{width:110px; height:30px; padding:0 13px; float:left; color:inherit; background:#252525; text-align:center}
 #head ul li	a:hover,#head ul li a.active	{color:#7ddc1f; height:30px;background:#272727; text-align:center; text-decoration:none}
 #cu3er-container							{width:800px; height:360px; float:left; outline:0; position:absolute; top:166px; left:0px; z-index:10}
 img.ban_bg									{width:auto; float:left; position:absolute; top:117px; right:200px}
 
-#content									{margin-top:-25px; width:100%; padding-bottom:20px; float:left; background:#ffffff url(contentBg.png) repeat-x;}
+#content									{margin-top:-25px; width:100%; float:left; background:#ffffff url(contentBg.png) repeat-x;}
 #content_cen								{width:800px; margin:0 auto}
 #content_sup								{width:800px; float:left; position:relative}
 
 
-#welcom_pan									{width:85%; margin-left:5%;margin-right:5%; margin-top:27px; padding-bottom:36px; float:left;  background:url(crosslines.png) no-repeat left 8px;}
-#welcom_pan h2.heading2											{width:auto; margin-top:9px; font-family:Arial, Helvetica, sans-serif; font-size:26px; color:#7ddc1f; font-weight:bold; line-height:30px; letter-spacing:-1.7px}
+#welcom_pan									{width:85%; margin-left:5%;margin-right:5%; margin-top:27px; float:left;  background:url(crosslines.png) no-repeat left 8px;}
+#welcom_pan h2.heading2											{width:auto; margin-top:9px; font-family:"BNAZANIN"; font-size:26px; color:#7ddc1f; font-weight:bold; line-height:30px; letter-spacing:-1.7px}
 #welcom_pan h2.heading2 span										{color:#3b3b3b; text-transform:lettercase; margin-right:5px}
 #welcom_pan #quotPan a.brochure						{float:left; width:auto; height:54px; margin:15px 31px 0 15px ; padding:0 8px 0 0; font-family:"Trebuchet MS", Arial, Helvetica, sans-serif; font-size:12px; color:#ffffff; line-height:54px; background:url(buttonBg.png) no-repeat right -54px}
 #welcom_pan #quotPan a.brochure span					{width:auto; height:54px; padding:0 13px 0 23px; float:left; background:url(buttonBg.png) no-repeat 0 0}
@@ -46,7 +46,7 @@ img.ban_bg									{width:auto; float:left; position:absolute; top:117px; right:
 #welcom_pan .div_pic .tr {width:25%; margin-right:10px}
 #welcom_pan	iframe							{margin:37px 0 0 14px; float:left; border-bottom:#c9c9c9 solid 1px; background:url(crosslines.png) no-repeat right 8px}
 #welcom_pan a.enlarg						{width:auto; margin:15px 0 0 14px; float:left; color:#848484}
-#welcom_pan h3.heading3								{ width:auto; font-family:Arial, Helvetica, sans-serif; font-size:26px; color:#31a1ff; font-weight:bold; line-height:60px; letter-spacing:-1.7px}
+#welcom_pan h3.heading3								{ width:auto; font-family:"BNAZANIN"; font-size:26px; color:#31a1ff; font-weight:bold; line-height:60px; letter-spacing:-1.7px}
 #welcom_pan h3.heading3 span										{color:#3b3b3b; margin-right:0px}
 #welcom_pan h3.t								{float:righ; margin-top:60px; }
 
@@ -64,12 +64,20 @@ ul#infoPan li p.descrip						{margin-top:13px; font-size:12px; line-height:16px;
 #quotPan h3									{width:274px; margin:14px 0 0 24px; float:right; line-height:45px}
 #quotPan p.error {text-align:center; color:red; margin-top:0px; float:left; width:50%}
 #quotPan input.txt							{width:176px; margin:20px 20px 0 0; padding:3px 5px; height:30px; float:right; font-family:Arial, Helvetica, sans-serif; font-size:17px; color:#bfbfbf; font-weight:bold; border:#cbcbcb solid 1px; background:#ffffff}
+#quotPan a {color:#5f5f5f}
 
-#quotPan input.btn							{width:113px; height:42px; margin-top:18px; float:right; font-family:Arial, Helvetica, sans-serif; font-size:17px; color:#ffffff; font-weight:bold; text-align:center; cursor:pointer; border:0; background:url(submitBtn.png) no-repeat}
-.actions input.btn							{width:113px; height:42px; margin-top:18px; float:left; font-family:Arial, Helvetica, sans-serif; font-size:17px; color:#ffffff;  text-align:center; cursor:pointer; border:0; background:url(submitBtn.png) no-repeat}
-#quotPan a.btn							{width:113px; height:42px; margin-top:18px; float:right; font-family:Arial, Helvetica, sans-serif; font-size:15px; color:#ffffff;  text-align:center; cursor:pointer; border:0; background:url(submitBtn.png) no-repeat}
+.btn							{margin-right:5px; width:auto; height:auto; margin-top:20px; float:right; font-family:"BNAZANIN"; font-size:17px; color:#3B3B3B; font-weight:bold; text-align:center; cursor:pointer; border:0; 
+background: -webkit-linear-gradient(white, #7DDC1F); /* For Safari */
+background: -o-linear-gradient(white, #7DDC1F); /* For Opera 11.1 to 12.0 */
+background: -moz-linear-gradient(white, #7DDC1F); /* For Firefox 3.6 to 15 */
+background: linear-gradient(white, #7DDC1F); /* Standard syntax (must be last) */
 
-#quotPan input.btn:active					{background-position:1px 1px}
+}
+.btn:hover					{
+   -webkit-box-shadow: 0 8px 6px -6px black;
+	   -moz-box-shadow: 0 8px 6px -6px black;
+	        box-shadow: 0 8px 6px -6px black;}
+a.btn span{text-decoration:none; color:#3B3B3B;}
 
 .foot-logo { width:70%;  margin-top:0px; height:60px; text-align:center}
 .foot-logo p.h6{background:url(logoft.png) no-repeat; position:relative; height:50px; width:100px; float:right; margin-left:200px; }
@@ -97,10 +105,10 @@ ul#infoPan li p.descrip						{margin-top:13px; font-size:12px; line-height:16px;
 #service_pan ul li p						{width:300px; margin:5px 0 0 10px; float:left; font-family:"Trebuchet MS", Arial, Helvetica, sans-serif; font-size:12px; color:#5c5c5c}
 #service_pan ul li p a						{width:auto; color:#7ddc1f; margin-left:10px}
 
-.div-slider {background:url(headBg.png) repeat;width:70%; margin-right:15%; margin-left:15%; margin-top:-20px}
+.div-slider {width:70%; margin-right:15%; margin-left:15%; margin-top:-20px}
 .div_pic {margin-top:20px;width:100%;  height:250px; }
 
-.head-serach {width:100%; background:url(headsearch.png) repeat-x}
+.head-serach {width:100%; background:url(headsearch.png) repeat-x; font-family:"BNAZANIN"; }
 .head-serach a#admin-link {color:#5f5f5f; margin-left:10px; width:300px}
 .head-serach a#admin-link:hover {text-decoration:none; color:#7ddc1f;background:url(headsearch.png)  no-repeat}
 .head-serach a#admin-link.active {text-decoration:none; color:#7ddc1f;background:url(headsearch.png)  no-repeat}
@@ -125,8 +133,7 @@ scrollbar-shadow-color: #fff; scrollbar-highlight-color: #fff;  width:100%; heig
 .upload-pic {height:100px}
 .add-picture {float:left;border:#444 solid .5px;}
 
-#add_new_picture {float:right; width:auto; height:54px; margin:15px 31px 0 15px ; padding:0 8px 0 0; font-family:"Trebuchet MS", Arial, Helvetica, sans-serif; font-size:12px; color:#ffffff; line-height:54px; background:url(buttonBg.png) no-repeat right -54px}
-#add_new_picture span					{width:auto; height:54px; padding:0 13px 0 23px; float:left; background:url(buttonBg.png) no-repeat 0 0}
+
 .remove-task {float:right; width:30px; height:25px; margin-top:30px}
 .enable_file_select {width:100px; height:130px; float:right; }
 
