--- a/app/views/pages/_form.html.haml
+++ b/app/views/pages/_form.html.haml
@@ -6,19 +6,13 @@
         - @page.errors.full_messages.each do |msg|
           %li= msg
 
+  
   .field
-    = f.label "عنوان صفحه به انگلیسی"
-    = f.text_field :title
-  .field
-    = f.label "عنوان صفحه به فارسی"
+    = f.label "عنوان صفحه "
     = f.text_field :title_fa  
+  
   .field
-    = f.label "توضیحات به انگلیسی"
-    %br
-      %div.editor
-      = f.text_area :page_html, :class => "ckeditor"
-  .field
-    = f.label "توضیحات به فارسی"
+    = f.label "متن صفحه"
     %br
       %div.editor
       = f.text_area :page_html_fa, :class => "ckeditor"
