--- a/app/views/pages/new.html.haml
+++ b/app/views/pages/new.html.haml
@@ -1,9 +1,9 @@
 .list-div
   #welcom_pan  
     %h2.heading2 
-      = t("Page")
-      %span
-        = t("IDM_Page")
+      = "صفحات متنی"
+      %span 
+        = "راشا"        
     .show-list
       = render 'form'
     #quotPan
