--- a/app/views/products/_form.html.haml
+++ b/app/views/products/_form.html.haml
@@ -5,22 +5,13 @@
       %ul
         - @product.errors.full_messages.each do |msg|
           %li= msg
-
+  
   .field
-    = f.label "عنوان محصول به انگلیسی"
-    = f.text_field :title    
-  .field
-    = f.label "عنوان محصول به فارسی"
+    = f.label "عنوان محصول"
     = f.text_field :title_fa
 
   .field
-    = f.label "توضیحات به انگلیسی"
-    %br
-      %div.editor
-      = f.text_area :description, :class => "ckeditor"
-
-  .field
-    = f.label "توضیحات به فارسی"
+    = f.label "توضیحات "
     %br
       %div.editor
       = f.text_area :description_fa, :class => "ckeditor"    
@@ -29,7 +20,7 @@
     =f.fields_for :pictures do |picture|  
       = render "shared/upload_image_form", :picture => picture
   .clrear-float    
-  = f.link_to_add content_tag(:span, "افزودن تصویر"), :pictures, :id => "add_new_picture"
+  = f.link_to_add content_tag(:span, "افزودن تصویر"), :pictures, :class => "btn", :id =>"add_new_picture"
   
   .actions
     = f.submit 'ثبت', :class => "btn"
