--- a/app/views/slides/index.html.haml
+++ b/app/views/slides/index.html.haml
@@ -1,13 +1,13 @@
 .list-div
   #welcom_pan   
-    %h2.heading2 
-      = t("Slider")
-      %span
-        = t("IDM_Slider")
+    %h2.heading2       
+      = "اسلایدر"
+      %span 
+        = "راشا"       
     .index_slider  
       = render 'home/slider'            
     #quotPan
-      = link_to content_tag("span", "عکس جدید"), new_slide_path, :class => "brochure"
+      = link_to content_tag("span", "عکس جدید"), new_slide_path, :class => "btn"
       
 :javascript
   $(".item").first().addClass("active");
