--- a/app/views/slides/show.html.haml
+++ b/app/views/slides/show.html.haml
@@ -1,9 +1,9 @@
 .list-div
   #welcom_pan   
-    %h2.heading2 
-      = t("Slider")
-      %span
-        = t("IDM_Slider")
+    %h2.heading2       
+      = "اسلایدر"
+      %span 
+        = "راشا"      
     %p#notice= notice
     = image_tag @slide.image(:gallery_size)
     .show-des-fa
