--- a/app/views/shared/_menu_bar.html.haml
+++ b/app/views/shared/_menu_bar.html.haml
@@ -2,12 +2,12 @@
   #head_cen
     .head_height
       .head-serach
-        -if is_admin?
-          =link_to current_user.name, edit_user_path(current_user), :id => "admin-link", :class => ('active' if current_page?(edit_user_path(current_user)) )
-          =link_to "خروج", delete_session_path, :id => "admin-link", :class => ('active' if current_page?(home_path)) 
-          
-          =link_to "اسلایدر", slides_path, :id => "admin-link", :class => ('active' if current_page?(slides_path))
+        -if is_admin?         
           =link_to "صفحه جدید", pages_path, :id => "admin-link", :class => ('active' if current_page?(pages_path))
+          =link_to "اسلایدر", slides_path, :id => "admin-link", :class => ('active' if current_page?(slides_path))
+          =link_to "مشتری جدید", customers_path, :id => "admin-link", :class => ('active' if current_page?(customers_path))
+          =link_to "خروج", delete_session_path, :id => "admin-link", :class => ('active' if current_page?(home_path)) 
+          =link_to current_user.name, edit_user_path(current_user), :id => "admin-link", :class => ('active' if current_page?(edit_user_path(current_user)) )          
           
         .pull-left
           
