--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -1,3 +1,10 @@
+body {
+  background-color: #fff;
+  color: #333;
+  font-family: verdana, arial, helvetica, sans-serif;
+  font-size: 13px;
+  line-height: 18px;
+}
 
 p, ol, ul, td {
   font-family: verdana, arial, helvetica, sans-serif;
@@ -11,8 +18,15 @@ pre {
   font-size: 11px;
 }
 
-a:hover {text-decoration:none;}
-a:visited{text-decoration:none;}
+a {
+  
+  
+  &:hover {
+    color: #fff;
+    text-decoration:none;
+  }
+}
+
 div {
   &.field, &.actions {
     margin-bottom: 10px;
@@ -24,29 +38,24 @@ div {
 }
 
 .field_with_errors {
-  padding: 1px;
-  
+  padding: 2px;
+  background-color: red;
   display: table;
-  
-  input {box-shadow: 5px 5px 5px red; }
 }
 
 #error_explanation {
-background:url(pat.png) repeat;
-  float:left;
-  width: 450px; 
+  width: 450px;
+  border: 2px solid red;
+  padding: 7px;
   padding-bottom: 0;
   margin-bottom: 20px;
   background-color: #f0f0f0;
   h2 {
-    width:95%;
-    text-align: center;
-    letter-spacing:1px;
+    text-align: left;
     font-weight: bold;
     padding: 5px 5px 5px 15px;
-    margin-top:0px;
     font-size: 12px;
-   
+    margin: -7px;
     margin-bottom: 0px;
     background-color: #c00;
     color: #fff;
@@ -54,52 +63,5 @@ background:url(pat.png) repeat;
   ul li {
     font-size: 12px;
     list-style: square;
-    
   }
-}
-
-
-.image-des-holder {
-  position: relative;
-  color:#fff;
-  padding:5px;
-  
-  top: -40px;  
-  background:url(slideBg1.png) repeat-x;
-  opacity: 0.7;
-  filter: alpha(opacity=70); /* For IE8 and earlier */;
-  height: 40px;
-  p {     
-    opacity:1;
-    filter:alpha(opacity=100); /* For IE8 and earlier */;
-    }
-  
-}
-.nav-company {
-  position: relative;
-  color:#fff;
-  padding:2px;
-  
-  top: -30px;  
-  background:url(slideBg1.png) repeat-x;
-  opacity: 0.7;
-  filter: alpha(opacity=70); /* For IE8 and earlier */;
-  height: 20px;
-  p {     
-    opacity:1;
-    filter:alpha(opacity=100); /* For IE8 and earlier */;
-    }
-  
-}
-
-
-.en{
-text-align:left;
-direction: ltr;
-}
-
-
-.fa{
-text-align:right;
-direction: rtl;
 }
