--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -132,3 +132,23 @@ scrollbar-shadow-color: #fff; scrollbar-highlight-color: #fff;  width:100%; heig
 .lable {float:right; width:100px; margin-top:25px; margin-right:5px; margin-left:-20px}
 .customer-des {height:100px; width:250px}
 .c-logo {float:right}
+
+.rezomeh {border-top:#444444 solid 1px;border-right:#444444 solid 1px;border-left:#444444 solid 1px; height:110px; width:90%; margin-right:5%; margin-left:5%; margin-top:100px; }
+.item-company {float:right; width:150px; height:100px; margin:5px;}
+.item-company span {margin-top:-20px; height:20px;  }
+
+.des-logo-company {
+    background: url("slideBg1.png") repeat-x scroll 0 0 transparent;
+    color: #FFFFFF;
+    height: 20px;
+    opacity: 0.7;
+    padding: 2px;
+    position:relative;
+    top: -30px;
+    
+}
+
+.des-logo-company p {
+    opacity: 1;
+}
+.himg {height:100px; }
