--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -64,6 +64,7 @@ ul#infoPan li p.descrip						{margin-top:13px; font-size:12px; line-height:16px;
 #quotPan p.error {text-align:center; color:red; margin-top:0px; float:left; width:50%}
 #quotPan input.txt							{width:176px; margin:20px 20px 0 0; padding:3px 5px; height:30px; float:right; font-family:Arial, Helvetica, sans-serif; font-size:17px; color:#bfbfbf; font-weight:bold; border:#cbcbcb solid 1px; background:#ffffff}
 #quotPan a {color:#5f5f5f}
+#quotPan a:hover {color:#7ddc1f}
 
 .btn							{margin-right:5px; width:auto; height:30px; margin-top:20px; float:right; font-family:"BNAZANIN"; font-size:17px; color:#fff; font-weight:bold; text-align:center; cursor:pointer; border:0px; background:#7ddc1f;}
 
@@ -140,12 +141,12 @@ scrollbar-shadow-color: #fff; scrollbar-highlight-color: #fff;  width:100%; heig
 .des-logo-company {
     background: url("slideBg1.png") repeat-x scroll 0 0 transparent;
     color: #FFFFFF;
-    height: 20px;
+    height: 0px;
     opacity: 0.7;
     padding: 2px;
     position:relative;
     top: -30px;
-    
+    display:none;
 }
 
 .des-logo-company p {
