--- a/app/views/pages/_form.html.haml
+++ b/app/views/pages/_form.html.haml
@@ -15,6 +15,6 @@
     = f.label "متن صفحه"
     %br
       %div.editor
-      = f.text_area :page_html_fa, :class => "ckeditor"
+      = f.text_area :page_html, :class => "ckeditor"
   .actions
     = f.submit 'ثبت', :class => "btn"
