--- a/app/views/services/show.html.haml
+++ b/app/views/services/show.html.haml
@@ -25,4 +25,4 @@
           \|
           = link_to 'بازگشت', services_path
           \|
-          = link_to 'حذف محصول', @service, method: :delete, data: { confirm: 'آیا میخواهید این خدمات را حذف کنید?'}
+          = link_to 'حذف خدمات', @service, method: :delete, data: { confirm: 'آیا میخواهید این خدمات را حذف کنید?'}
