--- a/app/views/shared/_upload_image_form.html.haml
+++ b/app/views/shared/_upload_image_form.html.haml
@@ -4,7 +4,7 @@
   
   .des-title
     توضیحات 
-    =picture.text_area :description_fa, :rows => 3        
+    =picture.text_area :description, :rows => 3        
   
   =picture.link_to_remove image_tag ("Delete_Icon.png"), :class => "remove-task"
 .clrear-float
