--- a/app/views/slides/_form.html.haml
+++ b/app/views/slides/_form.html.haml
@@ -12,7 +12,7 @@
     
     .s-description
       = f.label "توضیحات"
-      = f.text_area :description_fa, :id => "slide_des"
+      = f.text_area :description, :id => "slide_des"
   .clrear-float
     
   .actions
