--- a/app/views/slides/edit.html.haml
+++ b/app/views/slides/edit.html.haml
@@ -16,7 +16,7 @@
             
             .s-description
               = f.label "توضیحات"
-              = f.text_area :description_fa, :cols => '80', :rows => "3", :class => "slide-description"  
+              = f.text_area :description, :cols => '80', :rows => "3", :id => "slide_des"  
           
           .clrear-float
           .actions
