--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -34,17 +34,18 @@
   margin-bottom: 10px;
 }
 .list-div {width:85%; margin-top:10px; margin-bottom:20px; margin-left:5%; margin-right:5%;}
-.show-list {margin-top:70px; margin-bottom:20px}
+.show-list {margin-top:70px; margin-bottom:20px;  font-size:16px; }
+.show-list .field {font-family:"Nazli"; font-size:16px;}
 .index_slider {margin-top:100px; margin-bottom:20px; width:100%}
 .clrear-float {clear:both}
-.tr {float:left; width:300px; height:300px; margin-left:10px; text-align:center}
-.td {width:300px; margin:10px; text-align:center;}
-.td div.pro-title {padding-top:10px;padding-bottom:10px;background:url(pat.png) repeat;font-family:Arial, Helvetica, sans-serif; font-size:16px; color:#000; width:100%;}
-.td a div.pro-title {margin-top:20px; text-decoration:none;}
-.tr:hover div.pro-title { background:url(slideBg1.png) repeat-x; color:#fff; } 
-.td:hover a {text-decoration:none;}
-.td a.color-green {color:#7ddc1f;}
-.show-des-en {width:100%; margin-top:60px;float:right;}
+.tr {float:left; width:300px; height:300px; margin-left:10px; text-align:center; font-family:"Nazli"; font-size:16px;}
+.td {width:300px; margin:10px; text-align:center;font-family:"Nazli"; font-size:16px}
+.td div.pro-title {padding-top:10px;padding-bottom:10px;background:url(pat.png) repeat;font-family:"Nazli"; font-size:16px; color:#000; width:100%;}
+.td a div.pro-title {margin-top:20px; text-decoration:none; font-family:"Nazli"; font-size:16px;}
+.tr:hover div.pro-title { background:url(slideBg1.png) repeat-x; color:#fff; font-family:"Nazli"; font-size:16px;} 
+.td:hover a {text-decoration:none; }
+.td a.color-green {color:#7ddc1f; }
+.show-des-en {width:100%; margin-top:60px;float:right; font-family:"Nazli"; font-size:16px}
 
 .total-division {width:100%; }
 
@@ -55,7 +56,7 @@
 .newP_page {margin-top:50px}
 .t {color:#000}
 .description  {width:100%; }
-.footer_Link {text-align:center; margin-top:20px}
+.footer_Link {text-align:center; margin-top:20px; font-family:"Nazli"; font-size:16px}
 
 
 .rezomeh {border-top:#444444 solid 1px;border-right:#444444 solid 1px;border-left:#444444 solid 1px; height:120px; width:90%; margin-right:5%; margin-left:5%; margin-top:100px; }
