--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -1,5 +1,5 @@
-html{background:#151515; font-family:"BNAZANIN"}
-body										{margin:0; background:#151515; font-family: BNAZANIN;}
+html{background:#151515; font-family:"Nazli"; font-size:16px}
+body										{margin:0; background:#151515; font-family: Nazli;}
 *											{margin:0; padding:0}
 a											{outline:0; text-decoration:none}
 img											{border:0}
@@ -12,15 +12,15 @@ li											{list-style:none}
 
 #head_cen									{width:100%; margin:0 auto}
 #head_sup									{width:100%; float:left; position:relative}
-#head p.search								{width:auto; margin-top:12px; margin-right:20px; float:right; font-family:"BNAZANIN"; font-size:11px; color:#999999; line-height:25px; letter-spacing:1px}
+#head p.search								{width:auto; margin-top:12px; margin-right:20px; float:right; font-family:"Nazli"; font-size:11px; color:#999999; line-height:25px; letter-spacing:1px}
 #head p.search label						{width:auto; margin-right:10px; float:left}
-#head p.search input.txt					{width:125px; height:15px; margin-right:7px; float:left; font-family:"BNAZANIN"; font-size:12px; color:#2c2d2c; border:0; background:url(searchbg.png) no-repeat}
+#head p.search input.txt					{width:125px; height:15px; margin-right:7px; float:left; font-family:"Nazli"; font-size:16px; color:#2c2d2c; border:0; background:url(searchbg.png) no-repeat}
 
 #head p.search input.btn:active				{background-position:2px 2px}
 h1.logo										{width:200px; height:100px; margin-top:5px; float:left; background:url(logo.png) no-repeat}
 h1.logo a									{width:100%; height:100%; float:left; text-indent:-9999px}
 #head ul									{width:580px;  height:30px; margin-top:53px; float:right;text-align:center; margin-right:65px}
-#head ul li									{width:110px; height:30px; margin-left:1px; float:right; font-family:"BNAZANIN"; font-size:13px; color:#5f5f5f; line-height:20px; text-transform:uppercase; text-align:center}
+#head ul li									{width:110px; height:30px; margin-left:1px; float:right; font-family:"Nazli"; font-size:16px; color:#5f5f5f; line-height:20px; text-transform:uppercase; text-align:center}
 #head ul li:first-child						{margin:0}
 #head ul li	a,#head ul li a.active			{width:110px; height:30px; padding:0 13px; float:left; color:inherit; background:#252525; text-align:center}
 #head ul li	a:hover,#head ul li a.active	{color:#7ddc1f; height:30px;background:#272727; text-align:center; text-decoration:none}
@@ -32,20 +32,21 @@ img.ban_bg									{width:auto; float:left; position:absolute; top:117px; right:
 #content_sup								{width:800px; float:left; position:relative}
 
 #welcom_pan									{width:85%; margin-left:5%;margin-right:5%; margin-top:27px; float:left;  background:url(crosslines.png) no-repeat left 8px;}
-#welcom_pan h2.heading2											{width:auto; margin-top:9px; font-family:"BNAZANIN"; font-size:26px; color:#7ddc1f; font-weight:bold; line-height:30px; letter-spacing:-1.7px}
+#welcom_pan h2.heading2											{width:auto; margin-top:9px; font-family:"Nazli"; font-size:26px; color:#029743; font-weight:bold; line-height:30px; letter-spacing:-1.7px}
 #welcom_pan h2.heading2 span										{color:#3b3b3b; text-transform:lettercase; margin-right:5px}
-#welcom_pan #quotPan a.brochure						{float:left; width:auto; height:54px; margin:15px 31px 0 15px ; padding:0 8px 0 0; font-family:"Trebuchet MS", Arial, Helvetica, sans-serif; font-size:12px; color:#ffffff; line-height:54px; background:url(buttonBg.png) no-repeat right -54px}
+#welcom_pan #quotPan a.brochure						{float:left; width:auto; height:54px; margin:15px 31px 0 15px ; padding:0 8px 0 0; font-family:"Trebuchet MS", Arial, Helvetica, sans-serif; font-size:16px; color:#ffffff; line-height:54px; background:url(buttonBg.png) no-repeat right -54px}
 #welcom_pan #quotPan a.brochure span					{width:auto; height:54px; padding:0 13px 0 23px; float:left; background:url(buttonBg.png) no-repeat 0 0}
-#welcom_pan p								{width:755px; font-size:12px; color:#4d4d4d; line-height:18px;}
-#welcom_pan .details p {width:100%; margin:0px}
+#welcom_pan p								{width:755px; font-size:16px; color:#4d4d4d; line-height:18px;}
+#welcom_pan .show-des-en p {line-height:14px;padding:5px;margin-right:10px; width:90%;font-family:"Nazli"; font-size:20px; color:#4d4d4d; line-height:18px;}
+#welcom_pan .details p {line-height:14px;padding:5px;margin-right:10px; width:90%;font-family:"Nazli"; font-size:20px; color:#4d4d4d; line-height:18px;}
 #welcom_pan .details {float:right; width:55%; margin-top:10px; margin-right:10px}
 #welcom_pan .sample-pic {float:right; width:40%; text-align:left; margin-top:10px}
 #welcom_pan p.homepage {margin:60px 5px 5px 30px}
-#welcom_pan .div_pic .td {width:90%; margin-right:15px;}
-#welcom_pan .div_pic .tr {width:25%; margin-right:10px}
+#welcom_pan .div_pic .td {width:90%; margin-right:15px; font-family:"Nazli"; font-size:16px;}
+#welcom_pan .div_pic .tr {width:25%; margin-right:10px; font-family:"Nazli"; font-size:16px;}
 #welcom_pan	iframe							{margin:37px 0 0 14px; float:left; border-bottom:#c9c9c9 solid 1px; background:url(crosslines.png) no-repeat right 8px}
 #welcom_pan a.enlarg						{width:auto; margin:15px 0 0 14px; float:left; color:#848484}
-#welcom_pan h3.heading3								{ width:auto; font-family:"BNAZANIN"; font-size:26px; color:#31a1ff; font-weight:bold; line-height:60px; letter-spacing:-1.7px}
+#welcom_pan h3.heading3								{ width:auto; font-family:"Nazli"; font-size:26px; color:#31a1ff; font-weight:bold; line-height:60px; letter-spacing:-1.7px}
 #welcom_pan h3.heading3 span										{color:#3b3b3b; margin-right:0px}
 #welcom_pan h3.t								{float:righ; margin-top:60px; }
 
@@ -57,16 +58,16 @@ ul#infoPan li h3 span						{color:#3b3b3b; margin-right:2px}
 ul#infoPan li h3 img						{margin-right:31px; float:right}
 ul#infoPan li p								{width:100%; margin-top:25px; float:left; font-size:18px; color:#848484; line-height:24px; letter-spacing:-0.8px}
 ul#infoPan li p a             {font-size:18px; color:#848484; line-height:24px; letter-spacing:-0.8px}
-ul#infoPan li p.descrip						{margin-top:13px; font-size:12px; line-height:16px;}
+ul#infoPan li p.descrip						{margin-top:13px; font-size:16px; line-height:16px;}
 
 #quotPan									{width:100%; text-align:center; height:80px; margin-top:20px; float:right; position:relative;  border-top:#c9c9c9 solid 1px; background:url(pat.png) repeat }
 #quotPan h3									{width:274px; margin:14px 0 0 24px; float:right; line-height:45px}
 #quotPan p.error {text-align:center; color:red; margin-top:0px; float:left; width:50%}
 #quotPan input.txt							{width:176px; margin:20px 20px 0 0; padding:3px 5px; height:30px; float:right; font-family:Arial, Helvetica, sans-serif; font-size:17px; color:#bfbfbf; font-weight:bold; border:#cbcbcb solid 1px; background:#ffffff}
-#quotPan a {color:#5f5f5f}
-#quotPan a:hover {color:#7ddc1f}
+#quotPan a {color:#5f5f5f; font-size:16px;}
+#quotPan a:hover {color:#029743}
 
-.btn							{margin-right:5px; width:auto; height:30px; margin-top:20px; float:right; font-family:"BNAZANIN"; font-size:17px; color:#fff; font-weight:bold; text-align:center; cursor:pointer; border:0px; background:#7ddc1f;}
+.btn							{margin-right:5px; width:auto; height:30px; margin-top:20px; float:right; font-family:"Nazli"; font-size:17px; color:#fff; font-weight:bold; text-align:center; cursor:pointer; border:0px; background:#7ddc1f;}
 
 .btn:hover					{   -moz-box-shadow: inset -4px 0px 1px #848484;-webkit-box-shadow: inset -4px 0px 1px #848484;box-shadow: inset -4px 0px 1px #848484;}
 a.btn {height:30px;}
@@ -81,25 +82,25 @@ a.btn span{text-decoration:none; color:#3B3B3B; }
 #foot h6									{width:200px; height:131px; text-indent:-9999px; }
 #foot h6 a									{width:100%; height:100%; float:left}
 #foot ul									{float: left; width:400px; margin:11px auto 0 auto}
-#foot ul li									{width:auto; float:left; font-family:"Trebuchet MS", Arial, Helvetica, sans-serif; font-size:14px; color:#767676; line-height:18px}
+#foot ul li									{width:auto; float:left; font-family:"Trebuchet MS", Arial, Helvetica, sans-serif; font-size:16px; color:#767676; line-height:18px}
 #foot ul li a								{width:auto; float:left; color:inherit}
 #foot ul li.space							{width:auto; float:left; padding:0 6px}
-#foot p										{width:70%; margin-right:100px; margin-top:10px; float:right; font-family:"Trebuchet MS", Arial, Helvetica, sans-serif; font-size:14px; color:#767676; line-height:18px; text-align:center}
+#foot p										{width:70%; margin-right:100px; margin-top:10px; float:right; font-family:"Trebuchet MS", Arial, Helvetica, sans-serif; font-size:16px; color:#767676; line-height:18px; text-align:center}
 #foot p	a									{color:inherit}
 
-#service_pan								{width:100%; margin-top:20px; }
+#service_pan								{width:100%; margin-top:20px;  }
 #service_pan ul								{width:100%; }
-#service_pan ul li							{width:325px; height:100px; margin:0 30px;  border-bottom:#c9c9c9 solid 1px}
+#service_pan ul li							{font-family:"Nazli"; font-size:16px ;float:right;width:325px; height:120px; margin:0 30px;  border-bottom:#c9c9c9 solid 1px}
 /*#service_pan ul li:first-child				{border:0}
 */#service_pan ul li:hover					{background:#fbfbfb}
-#service_pan ul li h5						{width:100%; margin:10px 0 0 10px; font-family:Arial, Helvetica, sans-serif; font-size:16px; color:#7ddc1f}
-#service_pan ul li p						{width:300px; margin:5px 0 0 10px; float:left; font-family:"Trebuchet MS", Arial, Helvetica, sans-serif; font-size:12px; color:#5c5c5c}
-#service_pan ul li p a						{width:auto; color:#7ddc1f; margin-left:10px}
+#service_pan ul li h5						{width:100%; margin:10px 0 0 10px; font-family:"Nazli"; font-size:16px; color:#029743}
+#service_pan ul li p						{width:300px; margin:5px 0 0 10px; float:left; font-family:"Nazli"; font-size:16px; color:#5c5c5c}
+#service_pan ul li p a						{width:auto; color:#029743; margin-right:10px}
 
 .div-slider {width:70%; margin-right:15%; margin-left:15%; margin-top:-20px}
 .div_pic {margin-top:20px;width:100%;  height:250px; }
 
-.head-serach {width:100%; background:url(headsearch.png) repeat-x; font-family:"BNAZANIN"; }
+.head-serach {width:100%; background:url(headsearch.png) repeat-x; font-family:"Nazli"; font-size:16px }
 .head-serach a#admin-link {color:#5f5f5f; margin-left:10px; width:300px}
 .head-serach a#admin-link:hover {text-decoration:none; color:#7ddc1f;background:url(headsearch.png)  no-repeat}
 .head-serach a#admin-link.active {text-decoration:none; color:#7ddc1f;background:url(headsearch.png)  no-repeat}
@@ -112,15 +113,15 @@ border: thin solid white;
 scrollbar-face-color: #336699; scrollbar-3dlight-color: #336699; scrollbar-base-color: #336699;
 scrollbar-track-color: #336699; scrollbar-darkshadow-color: #000; scrollbar-arrow-color: #000;
 scrollbar-shadow-color: #fff; scrollbar-highlight-color: #fff;  width:100%; height:200px; margin:10px; }
-#head-menu {width:70%; text-align:center; margin-right:150px}
+#head-menu {width:70%; text-align:center; margin-right:150px; font-size:16px}
 
 .content1 {width:80%; float:right; margin-right:60px}
 .text-div {width:90%; margin-top:20px; margin-right:20px}
 .title {float:left; font-family:Arial, Helvetica, sans-serif; font-size:26px; color:#31a1ff; font-weight:bold; line-height:30px; letter-spacing:-1.7px}
 .des-title {float:right; width:250px; height:200px; text-align:center}
-#slide_des {width:300px; height:200px}
+#slide_des {width:500px; height:200px}
 .s-upload-img {width:60%;}
-.s-description {width:40%; margin-top:30px;float:right }
+.s-description {width:slide_des500px; margin-top:30px;float:right }
 .upload-pic {height:100px}
 .add-picture {float:left;border:#444 solid .5px;}
 
