--- a/app/views/home/home.html.haml
+++ b/app/views/home/home.html.haml
@@ -17,9 +17,9 @@
           %li                                        
             %h5= product.title
             %p
-              = strip_tags(product.description)
+              = truncate(strip_tags(product.description), :length => 80)
               =link_to "ادامه مطلب", product
-    
+    .clrear-float
     %h3.heading3
       %span 
         = "خدمات"
@@ -30,8 +30,9 @@
           %li                                        
             %h5= service.title
             %p
-              = strip_tags(service.description)
+              = truncate(strip_tags(service.description), :length => 80)
               =link_to  "ادامه مطلب", service
+    .clrear-float
     .rezomeh
       - Customer.all.each do |customer| 
         .item-company
