--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,7 +6,7 @@
     %meta{:name => "description", :content => @page_desc || "Rasha WebSite!"}
     = yield(:refresh_meta) if content_for?(:refresh_meta)
     %title
-      Rasha Web Site | #{@head.fetch(:title, '') if @head}
+      ایده پردازان هوشمند راشا  #{@head.fetch(:title, '') if @head}
     =stylesheet_link_tag "application", :media => "all"
     =favicon_link_tag 'favicon.png', rel:'shortcut icon', type: 'image/png'
     =javascript_include_tag "application"
