--- a/app/views/shared/_footer.html.haml
+++ b/app/views/shared/_footer.html.haml
@@ -5,5 +5,5 @@
         
     .foot-link         
       %p
-        © Your Copyright Info Here. Designed by:
+        Designed by:
         %a{href: "http://www.Raush.net", target: "_blank"} Raush.net
