--- a/app/views/users/edit.html.haml
+++ b/app/views/users/edit.html.haml
@@ -1,9 +1,9 @@
 .list-div
-  #welcom_pan{:class => I18n.locale}   
+  #welcom_pan
     %h2.heading2 
       %span
-        IDM Co
-      Edit Profile
+        راشا
+      پروفایل
     .show-list
       = render 'form' 
       
