--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -67,11 +67,11 @@ ul#infoPan li p.descrip						{margin-top:13px; font-size:16px; line-height:16px;
 #quotPan a {color:#5f5f5f; font-size:16px;}
 #quotPan a:hover {color:#029743}
 
-.btn							{margin-right:5px; width:auto; height:30px; margin-top:20px; float:right; font-family:"Nazli"; font-size:17px; color:#fff; font-weight:bold; text-align:center; cursor:pointer; border:0px; background:#7ddc1f;}
+.btn							{margin-right:5px; width:auto; height:30px; margin-top:20px; float:right; font-family:"Nazli"; font-size:17px;font-weight:bold; text-align:center; cursor:pointer; border:0px; background:#3B3B3B;}
 
 .btn:hover					{   -moz-box-shadow: inset -4px 0px 1px #848484;-webkit-box-shadow: inset -4px 0px 1px #848484;box-shadow: inset -4px 0px 1px #848484;}
 a.btn {height:30px;}
-a.btn span{text-decoration:none; color:#3B3B3B; }
+a.btn span{text-decoration:none; color:#7DDC1F; }
 
 .foot-logo { width:70%;  margin-top:0px; height:60px; text-align:center}
 .foot-logo p.h6{background:url(logoft.png) no-repeat; position:relative; height:50px; width:100px; float:right; margin-left:200px; }
@@ -142,15 +142,17 @@ scrollbar-shadow-color: #fff; scrollbar-highlight-color: #fff;  width:100%; heig
 .des-logo-company {
     background: url("slideBg1.png") repeat-x scroll 0 0 transparent;
     color: #FFFFFF;
-    height: 0px;
+    height: 32px;
     opacity: 0.7;
     padding: 2px;
     position:relative;
     top: -30px;
-    display:none;
+    width:100%;
+   
 }
 
 .des-logo-company p {
     opacity: 1;
+    width:100%;
 }
-.himg {height:100px; }
+.himg {height:100px; width:100%;}
