add set_meta_tags & fix customers logo company on home page

--- a/app/views/home/home.html.haml
+++ b/app/views/home/home.html.haml
@@ -46,5 +46,11 @@
     $(".slide-indicator").first().addClass("active");
     $('.carousel').carousel();
       
+    $('.item-company').mouseover(function(){
+      $(this).children(".des-logo-company").css({"display":"block"});    
+    });
     
+    $('.item-company').mouseout(function(){
+      $(this).children(".des-logo-company").css({"display":"none"});    
+    });
     
