--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -73,12 +73,12 @@ ul#infoPan li p.descrip						{margin-top:13px; font-size:16px; line-height:16px;
 a.btn {height:30px;}
 a.btn span{text-decoration:none; color:#7DDC1F; }
 
-.foot-logo { width:70%;  margin-top:0px; height:60px; text-align:center}
-.foot-logo p.h6{background:url(logoft.png) no-repeat; position:relative; height:50px; width:100px; float:right; margin-left:200px; }
-.foot-link { width:100%;}
+.foot-logo { width:80%; margin-right:20%; margin-top:0px; height:60px; }
+.foot-logo p.h6{background:url(logoft.png) no-repeat; position:relative; height:50px; width:100px; }
+.foot-link { width:80%; margin-right:40%; text-align:left}
 
-#foot										{width:100%; height:120px; float:left; }
-#foot_cen									{width:800px; margin:5px auto 0 auto}
+#foot										{width:100%; height:120px; float:left; text-align:center}
+#foot_cen									{width:800px;}
 #foot h6									{width:200px; height:131px; text-indent:-9999px; }
 #foot h6 a									{width:100%; height:100%; float:left}
 #foot ul									{float: left; width:400px; margin:11px auto 0 auto}
@@ -142,17 +142,17 @@ scrollbar-shadow-color: #fff; scrollbar-highlight-color: #fff;  width:100%; heig
 .des-logo-company {
     background: url("slideBg1.png") repeat-x scroll 0 0 transparent;
     color: #FFFFFF;
-    height: 32px;
+    height: auto;
     opacity: 0.7;
     padding: 2px;
     position:relative;
-    top: -30px;
+    top: -18px;
     width:100%;
-   
+    display:none
 }
 
 .des-logo-company p {
     opacity: 1;
     width:100%;
 }
-.himg {height:100px; width:100%;}
+.himg {height:100px; width:100%; text-align:center}
