--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,8 +2,9 @@
 %html
   %head
     %meta{:charset => "utf-8"}
-    %meta{:name => "keywords", :content => @keywords || "Rasha WebSite keywords"}
-    %meta{:name => "description", :content => @page_desc || "Rasha WebSite!"}
+    -set_meta_tags :keywords => %w[Rasha WebSite keywords "راشا"]    
+    -set_meta_tags :description => "خانه هوشمند, شرکت راشا, Smart Home"
+    -set_meta_tags :site => 'Site Title', :title => 'Rasha WebSite!', :reverse => true
     = yield(:refresh_meta) if content_for?(:refresh_meta)
     %title
       ایده پردازان هوشمند راشا  #{@head.fetch(:title, '') if @head}
