--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -7,24 +7,25 @@ img											{border:0}
 li											{list-style:none}
 
 #head										{width:100%; }
-.head_height								{height:160px}
+.head_height								{height:160px; position:fix}
 .head_pad									{padding-bottom:30px}
 
 #head_cen									{width:100%; margin:0 auto}
 #head_sup									{width:100%; float:left; position:relative}
-#head p.search								{width:auto; margin-top:12px; margin-right:20px; float:right; font-family:"Nazli"; font-size:11px; color:#999999; line-height:25px; letter-spacing:1px}
+#head p.search								{Fwidth:auto; margin-top:12px; margin-right:20px; float:right; font-family:"Nazli"; font-size:11px; color:#999999; line-height:25px; letter-spacing:1px}
 #head p.search label						{width:auto; margin-right:10px; float:left}
 #head p.search input.txt					{width:125px; height:15px; margin-right:7px; float:left; font-family:"Nazli"; font-size:16px; color:#2c2d2c; border:0; background:url(searchbg.png) no-repeat}
 
 #head p.search input.btn:active				{background-position:2px 2px}
-h1.logo										{width:150px; height:200px; margin-top:5px; float:left; background:url(logo.png) no-repeat}
+h1.logo										{margin-bottom:25px; margin-right:-250px; width:380px; height:130px; margin-top:5px; float:right; background:url(logo.png) no-repeat}
 h1.logo a									{width:100%; height:100%; float:left; text-indent:-9999px}
-#head ul									{width:580px;  height:30px; margin-top:53px; float:right;text-align:center; margin-right:110px}
-#head ul li									{width:110px; height:30px; margin-left:1px; float:right; font-family:"Nazli"; font-size:16px; color:#5f5f5f; line-height:20px; text-transform:uppercase; text-align:center}
-#head ul li:first-child						{margin:0}
-#head ul li	a,#head ul li a.active			{width:110px; height:30px; padding:0 13px; float:left; color:inherit; background:#252525; text-align:center}
-#head ul li	a:hover,#head ul li a.active	{color:#7ddc1f; height:30px;background:#272727; text-align:center; text-decoration:none}
-#cu3er-container							{width:800px; height:360px; float:left; outline:0; position:absolute; top:166px; left:0px; z-index:10}
+#head ul									{width:600px;  height:50px;float:left;text-align:center; margin-left:30px}
+#head ul li									{width:110px; height:120px; margin-left:1px; float:right; font-family:"Nazli"; font-size:16px; color:#5f5f5f; line-height:20px; text-transform:uppercase; text-align:center;  background:#272727; }
+#head ul li:first-child						{margin-left:1px;}
+#head ul li	a,#head ul li a.active			{width:110px; height:30px; float:left;  color:inherit;text-align:center; margin-top:90px}
+#head ul li	a:hover,#head ul li a.active	{color:#7ddc1f; height:30px;background:#272727; text-align:center; text-decoration:none;}
+
+#cu3er-container							{width:800px; height:360 px; float:left; outline:0; position:absolute; top:166px; left:0px; z-index:10}
 img.ban_bg									{width:auto; float:left; position:absolute; top:117px; right:200px}
 
 #content									{margin-top:-25px; width:100%; float:left; background:#ffffff url(contentBg.png) repeat-x;}
@@ -67,16 +68,25 @@ ul#infoPan li p.descrip						{margin-top:13px; font-size:16px; line-height:16px;
 #quotPan a {color:#5f5f5f; font-size:16px;}
 #quotPan a:hover {color:#029743}
 
-.btn							{margin-right:5px; width:auto; height:30px; margin-top:20px; float:right; font-family:"Nazli"; font-size:17px;font-weight:bold; text-align:center; cursor:pointer; border:0px; background:#3B3B3B;}
+.btn							{margin-right:500px; width:auto; height:30px; margin-top:20px; font-family:"Nazli"; font-size:17px;font-weight:bold; text-align:center; cursor:pointer; border:0px; 
+  background: #171913; /* Old browsers */
+background: -moz-linear-gradient(top,  #171913 0%, #3b3b3b 100%); /* FF3.6+ */
+background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#171913), color-stop(100%,#3b3b3b)); /* Chrome,Safari4+ */
+background: -webkit-linear-gradient(top,  #171913 0%,#3b3b3b 100%); /* Chrome10+,Safari5.1+ */
+background: -o-linear-gradient(top,  #171913 0%,#3b3b3b 100%); /* Opera 11.10+ */
+background: -ms-linear-gradient(top,  #171913 0%,#3b3b3b 100%); /* IE10+ */
+background: linear-gradient(to bottom,  #171913 0%,#3b3b3b 100%); /* W3C */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#171913', endColorstr='#3b3b3b',GradientType=0 ); /* IE6-9 */
+
+}
 
 .btn:hover					{   -moz-box-shadow: inset -4px 0px 1px #848484;-webkit-box-shadow: inset -4px 0px 1px #848484;box-shadow: inset -4px 0px 1px #848484;}
 a.btn {height:30px;}
 a.btn span{text-decoration:none; color:#7DDC1F; }
 
 .foot-logo { width:80%; margin-right:20%; margin-top:0px; height:60px; }
-.foot-logo p.h6{background:url(logoft.png) no-repeat; position:relative; height:90px; width:100px; }
-.foot-link { width:80%; margin-right:40%; text-align:left}
-.foot-link p {margin:0px}
+.foot-logo p.h6{background:url(logoft.png) no-repeat; position:relative; height:80px; width:100px; }
+.foot-link { width:80%; margin-right:39%; text-align:left}
 
 #foot										{width:100%; height:120px; float:left; text-align:center}
 #foot_cen									{width:800px;}
@@ -98,7 +108,7 @@ a.btn span{text-decoration:none; color:#7DDC1F; }
 #service_pan ul li p						{width:300px; margin:5px 0 0 10px; float:left; font-family:"Nazli"; font-size:16px; color:#5c5c5c}
 #service_pan ul li p a						{width:auto; color:#029743; margin-right:10px}
 
-.div-slider {width:70%; margin-right:15%; margin-left:15%; margin-top:-20px}
+.div-slider {float:right;width:75%; margin-right:13%; margin-top:-20px; height:480px}
 .div_pic {margin-top:20px;width:100%;  height:250px; }
 
 .head-serach {width:100%; background:url(headsearch.png) repeat-x; font-family:"Nazli"; font-size:16px }
@@ -114,7 +124,7 @@ border: thin solid white;
 scrollbar-face-color: #336699; scrollbar-3dlight-color: #336699; scrollbar-base-color: #336699;
 scrollbar-track-color: #336699; scrollbar-darkshadow-color: #000; scrollbar-arrow-color: #000;
 scrollbar-shadow-color: #fff; scrollbar-highlight-color: #fff;  width:100%; height:200px; margin:10px; }
-#head-menu {width:70%; text-align:center; margin-right:150px; font-size:16px}
+#head-menu { width:70%; text-align:center; margin-right:150px; font-size:16px}
 
 .content1 {width:80%; float:right; margin-right:60px}
 .text-div {width:90%; margin-top:20px; margin-right:20px}
@@ -122,7 +132,7 @@ scrollbar-shadow-color: #fff; scrollbar-highlight-color: #fff;  width:100%; heig
 .des-title {float:right; width:250px; height:200px; text-align:center}
 #slide_des {width:500px; height:200px}
 .s-upload-img {width:60%;}
-.s-description {width:slide_des500px; margin-top:30px;float:right }
+.s-description {width:500px; margin-top:30px;float:right }
 .upload-pic {height:100px}
 .add-picture {float:left;border:#444 solid .5px;}
 
@@ -136,20 +146,24 @@ scrollbar-shadow-color: #fff; scrollbar-highlight-color: #fff;  width:100%; heig
 .customer-des {height:100px; width:250px}
 .c-logo {float:right}
 
-.rezomeh {border-top:#444444 solid 1px;border-right:#444444 solid 1px;border-left:#444444 solid 1px; height:110px; width:90%; margin-right:5%; margin-left:5%; margin-top:100px; }
-.item-company {float:right; width:150px; height:100px; margin:5px;}
+.rezomeh {height:110px; width:75%; margin-right:5%; margin-left:5%; margin-top:100px; text-align:center}
+.item-company {width:20%; height:100px;}
 .item-company span {margin-top:-20px; height:20px;  }
 
 .des-logo-company {
-    background: url("slideBg1.png") repeat-x scroll 0 0 transparent;
-    color: #FFFFFF;
+    background: #333333;
+    text-align:center;
+    color:#fff;
     height: auto;
     opacity: 0.7;
     padding: 2px;
     position:relative;
-    top: -18px;
+    top: -19px;
     width:100%;
-    display:none
+    display:none;
+    font-family:"Nazli";
+    font-size:16px;
+    font-weight:bold;
 }
 
 .des-logo-company p {
@@ -157,5 +171,5 @@ scrollbar-shadow-color: #fff; scrollbar-highlight-color: #fff;  width:100%; heig
     width:100%;
 }
 .himg {height:100px; width:100%; text-align:center}
-.form-holder {width:120%; height:560px; margin-right:-60px}
-.cropFrame{width:1200px; height:700px}
+.form-holder {width:120%; height:auto; margin-right:-60px}
+.cropFrame{width:966px; height:452px}
