set hover menu change background

--- a/app/views/shared/_menu_bar.html.haml
+++ b/app/views/shared/_menu_bar.html.haml
@@ -2,11 +2,13 @@
   #head_cen
     .head_height
       .head-serach
-        -if is_admin?         
-          
+        -if is_admin? 
           =link_to "اسلایدر", slides_path, :id => "admin-link", :class => ('active' if current_page?(slides_path))
+          \|
           =link_to "مشتری جدید", customers_path, :id => "admin-link", :class => ('active' if current_page?(customers_path))
+          \|
           =link_to "خروج", delete_session_path, :id => "admin-link", :class => ('active' if current_page?(home_path)) 
+          \|
           =link_to current_user.name, edit_user_path(current_user), :id => "admin-link", :class => ('active' if current_page?(edit_user_path(current_user)) )          
           
         .pull-left
@@ -15,15 +17,14 @@
       #head-menu
         %h1.logo                    
         %ul
-          %li
-            = link_to "صفحه اصلی", home_path, :class => ('active' if current_page?( home_path))          
+          %li{:class => ('active' if current_page?( home_path)) }
+            = link_to "صفحه اصلی", home_path
           
           -Page.all.each do |page|  
-            %li
-              = link_to page.title, page_path(page), :class => ('active' if current_page?(page_path(page)))    
-          %li
-            = link_to "خدمات", Service, :class => ('active' if current_page?(Service))    
-          %li
-            = link_to "محصولات", Product,  :class => ('active' if current_page?(Product))
+            %li{:class => ('active' if current_page?(page_path(page)))    }
+              = link_to page.title, page_path(page)
+          %li{:class => ('active' if current_page?(Service))    }
+            = link_to "خدمات", Service
+          %li{ :class => ('active' if current_page?(Product))}
+            = link_to "محصولات", Product
         
-  
