--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,20 +12,25 @@
  *= require_tree .
  */
 .image-des-holder {
+  
   position: relative;
-  color:#000;
+  color:#FFF;
   padding:5px;
   font-family:"Btitr"; font-size:16px;
-  top: -40px;  
-  background-color:#efe;
+  top: -50px;  
+  background:url(slideBg1.png) repeat-x;
+
+  opacity:.7;
+    filter:alpha(opacity=70); /* For IE8 and earlier */;
   
   height: 40px;
   p {     
-    opacity:1;
-    filter:alpha(opacity=100); /* For IE8 and earlier */;
+    opacity:.7;
+    filter:alpha(opacity=70); /* For IE8 and earlier */;
     }
   
 }
+
 .item-row{
   position: relative;
 }
@@ -61,7 +66,7 @@
 .td a.color-green {color:#029743; }
 .show-des-en {width:100%; margin-top:60px;float:right; font-family:"Nazli"; font-size:16px}
 
-.total-division {width:100%; }
+.total-division {width:100%;}
 
 .above-menu {float:left;margin-top:5px; margin-left:-40px; width:80%;height:25px; background:url(bannerBgh.png) repeat-x;position: relative; }
 .below-menu{margin-top:-6px; right:-20px; width:105%;height:30px; background-color:#7ddc1f; position: relative; }
