--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -20,9 +20,12 @@ li											{list-style:none}
 h1.logo										{margin-bottom:5px; margin-right:20px; width:130px; max-width:130px;height:130px; margin-top:5px; float:right; background:url(logo.png) no-repeat}
 h1.logo a									{max-width:600px; height:100%; float:left; text-indent:-9999px}
 #head ul									{max-width:560px;height:50px;float:left;text-align:center; margin-left:80px}
-#head ul li									{max-width:110px; height:120px; margin-left:1px; float:right; font-family:"Nazli"; font-size:16px; color:#5f5f5f; line-height:20px; text-transform:uppercase; text-align:center;  background:#272727; }
+#head ul li									{max-width:110px; width:110px; height:120px; margin-left:1px; float:right; font-family:"Nazli"; font-size:16px; color:#5f5f5f; line-height:20px; text-transform:uppercase; text-align:center;  background:#272727; }
+#head ul li a {width:110px; top:90px; color:#5F5F5F}
+#head ul li a:hover {color:#7DDC1F;}
 #head ul li:first-child						{margin-left:1px;}
-#head ul li	a,#head ul li a.active			{width:110px; max-width:100%;height:30px; float:left;  color:inherit;text-align:center; margin-top:90px;
+#head ul li:hover,#head ul li.active			{width:110px; max-width:100%;height:120px; color:#7DDC1F;text-align:center; 
+background-color:#2D2D2D;
 -webkit-transition-property:color, text;
 -webkit-transition-duration: .5s, 1s;
 -webkit-transition-timing-function: linear, ease-in;
@@ -35,22 +38,22 @@ h1.logo a									{max-width:600px; height:100%; float:left; text-indent:-9999px
 -o-transition-duration:.5s;
 -o-transition-timing-function: linear, ease-in;
 }
-#head ul li	a:hover,#head ul li a.active	{color:#7ddc1f; height:30px;background:#272727; text-align:center; text-decoration:none;}
-
+#head ul li.active a {color:#7DDC1F;}
 #cu3er-container							{width:800px; height:360 px; float:left; outline:0; position:absolute; top:166px; left:0px; z-index:10}
 img.ban_bg									{width:auto; float:left; position:absolute; top:117px; right:200px}
 
-#content									{margin-top:-25px; width:100%; float:left; background:#ffffff url(contentBg.png) repeat-x;}
+#content									{width:100%; float:left; background:#ffffff url(contentBg.png) repeat-x;}
 #content_cen								{width:800px; margin:0 auto}
 #content_sup								{width:800px; float:left; position:relative}
 
-#welcom_pan									{width:85%; margin-left:5%;margin-right:5%; margin-top:27px; float:left;  background:url(crosslines.png) no-repeat left 8px;}
+#welcom_pan									{width:85%; margin-left:3%;margin-right:7%; margin-top:27px; float:left;  background:url(crosslines.png) no-repeat left 8px;}
 #welcom_pan h2.heading2											{width:auto; margin-top:9px; font-family:"Nazli"; font-size:26px; color:#029743; font-weight:bold; line-height:30px; letter-spacing:-1.7px}
 #welcom_pan h2.heading2 span										{color:#3b3b3b; text-transform:lettercase; margin-right:5px}
 #welcom_pan #quotPan a.brochure						{float:left; width:auto; height:54px; margin:15px 31px 0 15px ; padding:0 8px 0 0; font-family:"Trebuchet MS", Arial, Helvetica, sans-serif; font-size:16px; color:#ffffff; line-height:54px; background:url(buttonBg.png) no-repeat right -54px}
 #welcom_pan #quotPan a.brochure span					{width:auto; height:54px; padding:0 13px 0 23px; float:left; background:url(buttonBg.png) no-repeat 0 0}
 #welcom_pan p								{width:755px; font-size:16px; color:#4d4d4d; line-height:18px;}
-#welcom_pan .show-des-en p {line-height:14px;padding:5px;margin-right:10px; width:90%;font-family:"Nazli"; font-size:20px; color:#4d4d4d; line-height:18px;}
+#welcom_pan .show-des-fa {line-height:14px;padding:5px;margin-right:10px; width:90%;font-family:"Nazli"; font-size:20px; color:#4d4d4d; line-height:18px;}
+
 #welcom_pan .details p {line-height:14px;padding:5px;margin-right:10px; width:90%;font-family:"Nazli"; font-size:20px; color:#4d4d4d; line-height:18px;}
 #welcom_pan .details {float:right; width:55%; margin-top:10px; margin-right:10px}
 #welcom_pan .sample-pic {float:right; width:40%; text-align:left; margin-top:10px}
@@ -77,24 +80,25 @@ ul#infoPan li p.descrip						{margin-top:13px; font-size:16px; line-height:16px;
 #quotPan h3									{width:274px; margin:14px 0 0 24px; float:right; line-height:45px}
 #quotPan p.error {text-align:center; color:red; margin-top:0px; float:left; width:50%}
 #quotPan input.txt							{width:176px; margin:20px 20px 0 0; padding:3px 5px; height:30px; float:right; font-family:Arial, Helvetica, sans-serif; font-size:17px; color:#bfbfbf; font-weight:bold; border:#cbcbcb solid 1px; background:#ffffff}
+#quotPan input#password {margin-left:10px}
 #quotPan a {color:#5f5f5f; font-size:16px;}
 #quotPan a:hover {color:#029743}
 
-.btn							{margin-right:500px; width:auto; height:30px; margin-top:20px; font-family:"Nazli"; font-size:17px;font-weight:bold; text-align:center; cursor:pointer; border:0px; 
-  background: #171913; /* Old browsers */
-background: -moz-linear-gradient(top,  #171913 0%, #3b3b3b 100%); /* FF3.6+ */
-background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#171913), color-stop(100%,#3b3b3b)); /* Chrome,Safari4+ */
-background: -webkit-linear-gradient(top,  #171913 0%,#3b3b3b 100%); /* Chrome10+,Safari5.1+ */
-background: -o-linear-gradient(top,  #171913 0%,#3b3b3b 100%); /* Opera 11.10+ */
-background: -ms-linear-gradient(top,  #171913 0%,#3b3b3b 100%); /* IE10+ */
-background: linear-gradient(to bottom,  #171913 0%,#3b3b3b 100%); /* W3C */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#171913', endColorstr='#3b3b3b',GradientType=0 ); /* IE6-9 */
+.btn							{width:auto; height:40px; color:#3B3B3B;margin-top:20px; font-family:"Nazli"; font-size:17px;font-weight:bold; text-align:center; cursor:pointer; border:0px; 
+background: #52af5c; /* Old browsers */
+background: -moz-linear-gradient(top,  #52af5c 1%, #cdeb8b 100%); /* FF3.6+ */
+background: -webkit-gradient(linear, left top, left bottom, color-stop(1%,#52af5c), color-stop(100%,#cdeb8b)); /* Chrome,Safari4+ */
+background: -webkit-linear-gradient(top,  #52af5c 1%,#cdeb8b 100%); /* Chrome10+,Safari5.1+ */
+background: -o-linear-gradient(top,  #52af5c 1%,#cdeb8b 100%); /* Opera 11.10+ */
+background: -ms-linear-gradient(top,  #52af5c 1%,#cdeb8b 100%); /* IE10+ */
+background: linear-gradient(to bottom,  #52af5c 1%,#cdeb8b 100%); /* W3C */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#52af5c', endColorstr='#cdeb8b',GradientType=0 ); /* IE6-9 */
 
 }
 
 .btn:hover					{   -moz-box-shadow: inset -4px 0px 1px #848484;-webkit-box-shadow: inset -4px 0px 1px #848484;box-shadow: inset -4px 0px 1px #848484;}
-a.btn {height:30px;}
-a.btn span{text-decoration:none; color:#7DDC1F; }
+a.btn {height:20px;}
+a.btn span{text-decoration:none; color:#3B3B3B; }
 
 .foot-logo { width:80%; margin-right:20%; margin-top:0px; height:60px; }
 .foot-logo p.h6{background:url(logoft.png) no-repeat; position:relative; height:80px; width:100px; }
@@ -120,14 +124,15 @@ a.btn span{text-decoration:none; color:#7DDC1F; }
 #service_pan ul li p						{width:300px; margin:5px 0 0 10px; float:left; font-family:"Nazli"; font-size:16px; color:#5c5c5c}
 #service_pan ul li p a						{width:auto; color:#029743; margin-right:10px}
 
-.div-slider {float:right;width:75%; margin-right:13%; height:480px}
+.div-slider {float:right;width:75%; margin-right:13%; height:460px}
 .div_pic {margin-top:20px;width:100%;  height:250px; }
 
-.head-serach {width:100%; background:url(headsearch.png) repeat-x; font-family:"Nazli"; font-size:16px }
-.head-serach a#admin-link {color:#5f5f5f; margin-left:10px; width:300px}
+.head-serach {width:100%; color:#5f5f5f; background:url(headsearch.png) repeat-x; font-family:"Nazli"; font-size:16px; text-align:right; font-weight:bold; padding-top:10px; padding-right:15px}
+
+.head-serach a#admin-link {text-align:center;color:#5f5f5f; margin-left:5px;margin-right:5px; width:300px; height:20px; margin-top:20px }
 .head-serach a#admin-link:hover {text-decoration:none; color:#7ddc1f;background:url(headsearch.png)  no-repeat}
 .head-serach a#admin-link.active {text-decoration:none; color:#7ddc1f;background:url(headsearch.png)  no-repeat}
-.head-serach a {color:#7ddc1f; margin:2px; }
+.head-serach a {color:#7ddc1f;}
 .head-serach a:hover {color:#fff;  }
 .pull-left {margin-left :30px; margin-top:5px; height:25px}
 .main { width:100%;  }
@@ -158,7 +163,7 @@ scrollbar-shadow-color: #fff; scrollbar-highlight-color: #fff;  width:100%; heig
 .customer-des {height:100px; width:250px}
 .c-logo {float:right}
 
-.rezomeh {height:110px; width:75%; margin-right:5%; margin-left:5%; margin-top:100px; text-align:center}
+.rezomeh {height:110px; width:100%; margin-right:5%; margin-left:5%; margin-top:100px; text-align:center}
 .item-company {width:20%; height:100px;}
 .item-company span {margin-top:-20px; height:20px;  }
 
